# ai-chatbot

./: .gitignore  @Note.md  README.md
chatbot-backend/: dependencies.py  main.py  pyproject.toml
chatbot-backend/routers/: chat.py
chatbot-web/: index.html  package-lock.json  package.json
chatbot-web/src/: App.jsx  config.js  index.css
chatbot-web/src/api/: APIController.js  apiError.js  chatService.js
chatbot-web/src/api/Controllers/: Chat.js
chatbot-web/src/hooks/: useChat.js
chatbot-web/src/layouts/: Content.jsx  Header.jsx  InputBar.jsx
