[project]
name = "chatbot-backend"
version = "0.1.0"
description = "A backend for a chatbot application using FastAPI and Google GenAI."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.137.1",
    "google>=3.0.0",
    "google-genai>=2.8.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pipreqs>=0.5.0",
]
